Fix coin name overflow

--- a/css/coins.css
+++ b/css/coins.css
@@ -68,6 +68,10 @@ main {
 	flex: 1;
 	margin: 0;
 	margin-left: .5em;
+
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
 
 .coin-white .coin-bottom, .coin-white .coin-graph {
